--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, render } from "astro:content";
-import BaseLayout from "@/layouts/BaseLayout.astro";
+import ArticleLayout from "@/layouts/ArticleLayout.astro";
 
 export async function getStaticPaths() {
   const articles = await getCollection("articles");
@@ -14,6 +14,6 @@ const { article } = Astro.props;
 const { Content } = await render(article);
 ---
 
-<BaseLayout>
+<ArticleLayout frontmatter={article.data}>
   <Content />
-</BaseLayout>
+</ArticleLayout>
