--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Article from "@/components/Article.astro";
+import { formatDate } from "@/utils/formatDate";
 
 import { getCollection } from "astro:content";
 
@@ -15,9 +16,9 @@ const articles = await getCollection("articles");
       articles.map((article: any) => (
         <Article
           url={`/articles/${article.id}`}
-          title={"article.title"}
-          description={"description"}
-          pubDate="date"
+          title={article.data.title}
+          description={article.data.description}
+          pubDate={formatDate(article.data.pubDate)}
         />
       ))
     }
@@ -29,6 +30,6 @@ const articles = await getCollection("articles");
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
+    gap: 0.75rem;
   }
 </style>
