--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,31 @@ html {
   font-family: system-ui, sans-serif;
 }
 
+:root {
+  --background: #f5f5f4;
+  --primary: #000;
+  --secondary: #d6d3d1;
+}
+
+h1 {
+  margin-bottom: 1rem;
+}
+
+.dark {
+  --background: #111;
+  --primary: #fff;
+  --secondary: #f5f5f4;
+}
+
 body {
   max-width: 80ch;
   width: 100%;
   margin: 0 auto;
   padding: 1rem;
   line-height: 1.5;
+
+  background-color: var(--background);
+  color: var(--primary);
 }
 
 a {
