--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,16 +8,17 @@ html {
   --background: #f5f5f4;
   --primary: #000;
   --secondary: #d6d3d1;
-}
-
-h1 {
-  margin-bottom: 1rem;
+  --text-secondary: #000000a0;
 }
 
 .dark {
   --background: #111;
   --primary: #fff;
   --secondary: #f5f5f4;
+}
+
+h1 {
+  margin-bottom: 1rem;
 }
 
 body {
