--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,8 @@ html {
 .dark {
   --background: #111;
   --primary: #fff;
-  --secondary: #f5f5f4;
+  --secondary: #404040;
+  --text-secondary: #f5f5f4;
 }
 
 h1 {
